fixed hw6 issues